# agentguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs-pages.yml  publish.yml
docs/: changelog.md  contributing.md  getting-started.md  index.md
docs/advanced/: benchmarking.md  middleware.md  multi-agent.md  policy-as-code.md  telemetry.md  trace-platform.md
docs/guides/: budget-enforcement.md  circuit-breaker.md  custom-validators.md  guard-decorator.md  rate-limiting.md  response-verification.md  testing.md  tracing.md
docs/integrations/: anthropic.md  autogen.md  crewai.md  langchain.md  mcp.md  openai.md  openrouter.md
docs/reference/: api.md  cli.md  config.md  errors.md  types.md
examples/: budget_enforcement.py  langchain_example.py  mcp_example.py  openai_compatible.py  openai_example.py  quickstart.py  response_verification.py
research/: deep_verification_research.md
scripts/benchmarks/: run_benchmarks.py
scripts/live/: live_test.py  live_test_v2.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/advanced/benchmarking/: index.html
site/advanced/middleware/: index.html
site/advanced/multi-agent/: index.html
site/advanced/policy-as-code/: index.html
site/advanced/telemetry/: index.html
site/advanced/trace-platform/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/getting-started/: index.html
site/guides/budget-enforcement/: index.html
site/guides/circuit-breaker/: index.html
site/guides/custom-validators/: index.html
site/guides/guard-decorator/: index.html
site/guides/rate-limiting/: index.html
site/guides/response-verification/: index.html
site/guides/testing/: index.html
site/guides/tracing/: index.html
site/integrations/anthropic/: index.html
site/integrations/autogen/: index.html
site/integrations/crewai/: index.html
site/integrations/langchain/: index.html
site/integrations/mcp/: index.html
site/integrations/openai/: index.html
site/integrations/openrouter/: index.html
site/reference/api/: index.html
site/reference/cli/: index.html
site/reference/config/: index.html
site/reference/errors/: index.html
site/reference/types/: index.html
site/search/: search_index.json
src/agentguard/: __init__.py  middleware.py  policy.py  shared.py  telemetry.py
src/agentguard/benchmark/: __init__.py  artifacts.py  report.py  runner.py  scenarios.py
src/agentguard/cli/: __init__.py  main.py
src/agentguard/core/: __init__.py  guard.py  middleware.py  policy.py  redaction.py  registry.py  telemetry.py  trace.py  types.py
src/agentguard/costs/: __init__.py  extractors.py  ledger.py  pricing.py  tracker.py  types.py
src/agentguard/dashboard/: __init__.py  server.py
src/agentguard/guardrails/: __init__.py  budget.py  circuit_breaker.py  rate_limiter.py  retry.py  shared.py  timeout.py
src/agentguard/integrations/: __init__.py  anthropic_integration.py  autogen_integration.py  crewai_integration.py  langchain_integration.py  mcp_integration.py  openai_compatible.py  openai_integration.py  tracked_clients.py
src/agentguard/reporting/: __init__.py  console.py  json_report.py
src/agentguard/testing/: __init__.py  assertions.py  generator.py  recorder.py  replayer.py
src/agentguard/validators/: __init__.py  (+4 more)
tests/: __init__.py  conftest.py  test_async.py  test_autogen.py  test_benchmark.py  test_benchmark_scenarios.py  test_crewai.py  test_developer_experience.py  test_features.py  test_guard.py  test_guardrails.py  test_integrations.py  test_llm_costs.py  test_openai_compatible.py  test_scenarios_exhaustive.py  test_telemetry.py  test_testing.py  test_trace_platform.py  test_validators.py  test_verification_engine.py
(+7 files in other folders)
